--- a/src/app/main-layout/body-content/side-bar/side-bar.component.html
+++ b/src/app/main-layout/body-content/side-bar/side-bar.component.html
@@ -5,7 +5,7 @@
        class="NavBarButton"
        color="secondary"
        [routerLink]="['/']">
-      <mat-icon style="padding-bottom:3px; padding-right:15px;">home</mat-icon>Home
+      <mat-icon style="padding-bottom:3px; padding-right:15px;">home</mat-icon>Lorem Ipsum
     </a>
 
     <a mat-flat-button
