--- a/src/app/main-layout/nav-bar-menu/nav-bar-menu.component.html
+++ b/src/app/main-layout/nav-bar-menu/nav-bar-menu.component.html
@@ -5,6 +5,7 @@
 
       <div class="Flex-Content1">
         <button (click)="vm.isPressed = !vm.isPressed; onToggle()"
+                class="button-configs"
                 [ngClass]="{'pressed':vm.isPressed}"
                 mat-button
                 [matTooltip]="!vm.isPressed ? 'Menu' : 'Close'"
