--- a/src/my-theme.scss
+++ b/src/my-theme.scss
@@ -1,20 +1,32 @@
 @use '@angular/material' as mat;
 @include mat.core();
 
-$candy-app-primary: mat.define-palette(mat.$blue-palette, 200);
-$candy-app-accent: mat.define-palette(mat.$blue-palette, A200, A100, A400);
-$candy-app-warn: mat.define-palette(mat.$blue-palette);
-
-$candy-app-theme: mat.define-light-theme( $candy-app-primary, $candy-app-accent, $candy-app-warn);
-
-@include mat.all-component-themes($candy-app-theme);
+$light-primary: mat.define-palette(mat.$blue-palette, 200);
+$light-accent: mat.define-palette(mat.$blue-palette, A200, A100, A400);
+$light-warn: mat.define-palette(mat.$blue-palette);
+$light-theme: mat.define-light-theme((
+ color: (
+   primary: $light-primary,
+   accent: $light-accent,
+   warn: $light-warn
+ ),
+ typography: mat.define-typography-config(),
+ density: 0,
+));
+@include mat.all-component-themes($light-theme);
 
 .dark-theme {
-  $primary-dark: mat.define-palette(mat.$grey-palette, 900);
-  $accent-dark: mat.define-palette(mat.$grey-palette);
-  $warn-dark: mat.define-palette(mat.$grey-palette);
-
-  $theme-dark: mat.define-dark-theme($primary-dark, $accent-dark, $warn-dark);
-
-  @include mat.all-component-themes($theme-dark);
+  $dark-primary: mat.define-palette(mat.$grey-palette, 900);
+  $dark-accent: mat.define-palette(mat.$grey-palette);
+  $dark-warn: mat.define-palette(mat.$grey-palette);
+  $dark-theme: mat.define-dark-theme((
+  color: (
+    primary: $dark-primary,
+    accent: $dark-accent,
+    warn: $dark-warn
+  ),
+  typography: mat.define-typography-config(),
+  density: 0,
+  ));
+  @include mat.all-component-themes($dark-theme);
 }
