--- a/src/app/main-layout/footer-bar/footer-bar.component.css
+++ b/src/app/main-layout/footer-bar/footer-bar.component.css
@@ -31,3 +31,10 @@
 .theme-symbol{
     padding-right: 15px;
 }
+
+
+.toggle-button{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
