--- a/src/app/main-layout/footer-bar/footer-bar.component.html
+++ b/src/app/main-layout/footer-bar/footer-bar.component.html
@@ -6,6 +6,7 @@
     <div class="Flex-Content1">
       <mat-icon class="theme-symbol">{{(this.toggleStatus) ? 'nights_stay' : 'light_mode'}}</mat-icon>
       <mat-slide-toggle (click)="onToggle()"
+                        class="toggle-button"
                         [matTooltip]="(this.toggleStatus) ? 'Toggle Light Theme' : 'Toggle Dark Theme'"
                         [matTooltipShowDelay]="showDelay.value"
                         [matTooltipHideDelay]="hideDelay.value">
