--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -2,9 +2,9 @@
 
   <div class="body-text">
     <h1>Home Page</h1>
-
-    <app-blog-module class="height-inherit"></app-blog-module>
-    <!-- <app-tiny-mce-module></app-tiny-mce-module> -->
+    
+    <app-home-three-alternative-four>
+    </app-home-three-alternative-four>
   </div>
 </div>
 
