--- a/src/app/sub-pages/contact-info/contact-info.component.html
+++ b/src/app/sub-pages/contact-info/contact-info.component.html
@@ -25,6 +25,9 @@
     </mat-tab>
   </mat-tab-group>
 
+  <div id="commento"></div>
+
+
   <div class="border">
     <div class="contact-details-block">
 
@@ -70,7 +73,8 @@
            [matTooltipHideDelay]="200">
         </a>
 
-        <a href="https://open.spotify.com/user/trip_down_memory_lane"
+        <a
+        [matTooltip]="'hmmm'"
          target="_blank"
          class="fa-brands fa-spotify fa-2xl"></a>
       </div>
