--- a/src/app/main-layout/body-content/side-bar/side-bar.component.html
+++ b/src/app/main-layout/body-content/side-bar/side-bar.component.html
@@ -8,12 +8,12 @@
       <mat-icon style="padding-bottom:3px; padding-right:15px;">home</mat-icon>Lorem Ipsum
     </a>
 
-    <a mat-flat-button
+    <!-- <a mat-flat-button
        class="NavBarButton"
        color="secondary"
        [routerLink]="['/schedule']">
       <mat-icon style="padding-bottom:3px; padding-right:15px;">calendar_month</mat-icon>Lorem Ipsum
-    </a>
+    </a> -->
 
     <a mat-flat-button
        class="NavBarButton"
