Removed one button

--- a/src/app/main-layout/body-content/side-bar/side-bar.component.html
+++ b/src/app/main-layout/body-content/side-bar/side-bar.component.html
@@ -184,7 +184,7 @@
 
   </div>
 
-  <div class="Flex-Content2">
+  <!-- <div class="Flex-Content2">
     <a mat-flat-button
        class="NavBarButtonBottom"
        color="secondary"
@@ -192,6 +192,6 @@
        [routerLink]="['/website-details']">
       <mat-icon style="padding-bottom:3px; padding-right:15px;">info</mat-icon>Website Details
     </a>
-  </div>
+  </div> -->
 
 </div>
